[gd_scene load_steps=10 format=2]

[ext_resource path="res://source/player_vehicle/PlayerVehicle.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/characters/player_vehicle/player_vehicle_body.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/characters/player_vehicle/player_vehicle_wheel.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 28.9995
height = 292.001

[sub_resource type="CapsuleShape2D" id=6]
radius = 38.5
height = 107.0

[sub_resource type="PhysicsMaterial" id=5]
friction = 3.0
rough = true
absorbent = true

[sub_resource type="CircleShape2D" id=3]
radius = 27.0

[sub_resource type="PhysicsMaterial" id=4]
friction = 3.0
rough = true
absorbent = true

[sub_resource type="CircleShape2D" id=2]
radius = 27.0

[node name="PlayerVehicle" type="RigidBody2D" groups=["player"]]
mass = 100.0
gravity_scale = 5.0
script = ExtResource( 2 )

[node name="CollisionShapeBody" type="CollisionShape2D" parent="."]
position = Vector2( -1, -58 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShapeBodyTop" type="CollisionShape2D" parent="."]
position = Vector2( -40, -88.5 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Body" type="Sprite" parent="."]
position = Vector2( 0, -77 )
texture = ExtResource( 3 )
flip_h = true

[node name="FrontWheel" type="RigidBody2D" parent="."]
position = Vector2( 118, -27 )
mass = 20.0
physics_material_override = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontWheel"]
shape = SubResource( 3 )

[node name="PinJoint2D" type="PinJoint2D" parent="FrontWheel"]
node_a = NodePath("../..")
node_b = NodePath("..")
softness = 0.03

[node name="FrontWheel" type="Sprite" parent="FrontWheel"]
texture = ExtResource( 4 )

[node name="BackWheel" type="RigidBody2D" parent="."]
position = Vector2( -118, -27 )
mass = 20.0
physics_material_override = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackWheel"]
shape = SubResource( 2 )

[node name="PinJoint2D" type="PinJoint2D" parent="BackWheel"]
node_a = NodePath("../..")
node_b = NodePath("..")
softness = 0.03

[node name="BackWheel" type="Sprite" parent="BackWheel"]
texture = ExtResource( 4 )
